main-test/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test1
  labels:
    name: test1
---

apiVersion: v1
kind: Namespace
metadata:
  name: test2
  labels:
    name: test2
